# wind_velocity_observer

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/wind_velocity_observer/: ros_handler.hpp  wind_velocity_observer.hpp
launch/: wind_velocity_observer.launch
logs/: _2023-01-27-16-05-19.bag  constant_wind.eps  moving_time_varying_wind.eps  plot_wind_bags.m  time_varying_wind.eps
src/: main.cpp
src/lib/: ros_handler.cpp  wind_velocity_observer.cpp
